--- a/index.html
+++ b/index.html
@@ -1,28 +1,39 @@
- <!DOCTYPE html>
-  <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-    <script src='main.js'></script>
-  </head>
-  <body>
-    <header class=""header>
-<a href="#" class="logo" >porfolio</a>
-<nav class="navbar">
-    <a href="#home">Home</a>
-    <a href="about">About</a>
-    <a href="services">Projects</a>
-    <a href="portfolios">Portfolios</a>
-    <a href="contact">Contacts</a>
-</nav>
+<!doctype html>
+<html>
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 
-    </header>
-  </body>
-  </html>
+<body class="font-[poppins] bg-gradient-to-t from-[#fbc2eb] to-[#a6c1ee] h-screen">
+   <header class="bg-white">
+    <nav class="flex justify-between items-center w-[92%] bg-black-400 max-auto">
+        <!-- <div>
+           <img class="w-10"  alt="coding girl">
+        </div> -->
+        <i class="fa-solid fa-bars"></i>
+        <div class="md:static absolute bg-white min-h-[60vh] left-0 top-[-100%] md:w-auto w-full flex items-center px-5">
+              <ul class="flex md:flex-row flex-col md:items-center md:gap-[4vw] gap-8 gap-6 flex items-center px-5">
+                <li><a class="hover-text-blue-500" href="#">Home</a></li>
+                <li><a class="hover-text-blue-500" href="#">About</a></li>
+                <li><a class="hover-text-blue-500" href="#">Services</a></li>
+                <li><a class="hover-text-blue-500" href="#">Portfolio</a></li>
+                <li><a  class="hover-text-blue-500"href="#">Contact</a></li>
+             </ul>
+        </div>
+        <div class="flex items-center gap-6 ">
+            <button class="bg-[#a6c1ee] text-white px-5"></button>
+            <ion-icon name="menu" class="text-3xl cursor-pointer md:hidden"></ion-icon>
+
+        </div>
+    </nav>
+  
+   </header>
+</body>
+
+</html>
